--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,34 @@
     padding: 0;
 }
 
+body{
+    background-color: #f6f8f9;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 /* Header Style */
 header{
-    height: 100px;
-    background-color: lightgreen;
+    background-color: white;
 }
+
+.box-logo{   
+    height: 100px;
+    padding: 10px 30px
+}
+
+.logo{
+    height: 80px;
+    line-height: 80px;
+    vertical-align: middle;
+}
+
+.logo-text{
+    display: inline-block;
+    font-size: 60px;
+    font-weight: 600;
+    vertical-align: middle;
+}
+
 
 /* Main Style */
 main{
