--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 /* General Style */
-
 *{
     box-sizing: border-box;
     margin: 0;
@@ -10,6 +9,15 @@ body{
     background-color: #f6f8f9;
     font-family: Arial, Helvetica, sans-serif;
 }
+/* /General Style */
+
+/* Utility Style */
+
+.pl-40{
+    padding-left: 40px;
+}
+
+/* /Utility Style */
 
 /* Header Style */
 header{
@@ -29,10 +37,11 @@ header{
 
 .logo-text{
     display: inline-block;
-    font-size: 60px;
+    font-size: 50px;
     font-weight: 600;
     vertical-align: middle;
 }
+/* /Header Style */
 
 
 /* Main Style */
@@ -41,5 +50,31 @@ main{
     height: 500px;
     margin: auto;
     margin-top: 50px;
-    background-color: lightskyblue;
+    border-radius: 10px;
+    background-color: white;
 }
+
+.button-bar{
+    border-bottom: 1px solid #c6cbd0;
+    padding: 15px 60px;
+}
+
+.button{
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    padding: 10px 15px;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
+.select{
+    color: white;
+    background-color: #48adf1;
+}
+
+.unselect{
+    color: #c6cbd0;
+    border: 1px solid #c6cbd0;
+}
+/* Main Style */
